<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@drawable/bg_gradient_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@mipmap/cerberus_1_round"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permissions_required"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permissions_desc"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_accessibility_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/grant_accessibility_permission"
        app:icon="@drawable/ic_accessibility"
        app:iconGravity="textStart"
        android:background="@drawable/bg_gradient_red"
        android:textColor="@android:color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_overlay_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/grant_overlay_permission"
        app:icon="@drawable/ic_overlay"
        app:iconGravity="textStart"
        android:background="@drawable/bg_gradient_red"
        android:textColor="@android:color/white"/>
</LinearLayout>